# rewind

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INIT.md  LICENSE-APACHE  LICENSE-MIT  README.md  SIDECAR_IMPLEMENTATION_SUMMARY.md  index.html  package.json  test-setup.ts  vite.config.ts
.claude/: handoff.md  settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: sidecar-architecture.md  swe-config.json
docs/decisions/: bun-test-runner.md  depotdownloader-sidecar.md  gpl2-licensing.md  layered-architecture.md  manual-manifest-input.md  no-backup-mvp.md  privilege-escalation.md  progress-ui.md  vdf-parser-design.md
docs/domain/: depotdownloader.md  downgrade-process.md  platform-differences.md  steam-internals.md  steamkit-sidecar.md
docs/specs/: app-shell.md  auth-ui.md  credential-storage.md  downgrade-pipeline.md  downgrade-ui.md  game-listing.md  game-select-ui.md  list-depots.md  manifest-diff.md  manifest-listing-overhaul.md  manifest-parser.md  manifest-select.md  mvp-scope.md  sidecar-setup.md  steam-ui-overhaul.md  steamkit-sidecar.md  vdf-parser.md
rewind-cli/: Cargo.toml
rewind-cli/src/: app.rs  main.rs
rewind-core/: Cargo.toml
rewind-core/src/: cache.rs  config.rs  depot.rs  image_cache.rs  immutability.rs  lib.rs  localconfig.rs  manifest_db.rs  patcher.rs  reshade.rs  scanner.rs  steam_guard.rs  steamdb.rs
rewind-core/tests/: image_cache_test.rs  integration.rs
scripts/: build-sidecar.sh  download-sidecar.sh
sidecar/: .gitignore  test-sidecar.sh
sidecar/RewindSidecar/: JsonOutput.cs  Program.cs  RewindSidecar.csproj  SteamSession.cs
sidecar/SteamKitSidecar/: JsonOutput.cs  Program.cs  (+4 more)
src/: App.css  App.test.tsx  App.tsx  steps.test.ts  steps.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+116 files in other folders)
