[package]
name = "rewind-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
keyvalues-parser = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
dirs = "5"
futures-util = "0.3"
steamlocate = "2"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
