[package]
name = "rewind-core"
version = "0.5.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
walkdir = "2"
thiserror = "2"
dirs = "5"
steamlocate = "2"
serde_json = "1"
image = "0.25"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
sevenz-rust = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
compress-tools = "0.14"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
